--- a/MoneyTransfer.Api/appsettings.json
+++ b/MoneyTransfer.Api/appsettings.json
@@ -27,5 +27,22 @@
     "Properties": {
       "ApplicationName": "MoneyTransferApi1"
     }
+  },
+  "JibitConfig": {
+    "BaseUrl": "https://napi.jibit.ir/",
+    "Timeout": "00:00:10",
+    "SecretKey": "jeaq5hcC7OZKh8uhzp7VQpAK5",
+    "ApiKey": "63TdxeGTdm",
+    "GenerateTokenUrl": "/v1/tokens/generate",
+    "GeneratePayIdUrl": "/v1/paymentIds",
+    "PayIdInfoUrl": "/v1/paymentIds",
+    "PayIdInquiryUrl": "/v1/payments/",
+    "PayIdVerifyUrl": "/v1/payments/{0}/verify",
+    "PayIdFailUrl": "/v1/payments/{0}/fail"
+  },
+  "HangfireConfig": {
+    "BaseUrl": "https://napi.jibit.ir/",
+    "Timeout": "00:00:10",
+    "ScheduleUrl": "/api/v1/Jobs/ScheduleJob"
   }
 }
