--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstraction\IRepository\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Positron.Helper" Version="1.0.1" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="Positron.Helper" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
